nginx/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 'ankita-stage-nginx-namespace'
