nginx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: stage-nginx-namespace
  labels:
    app: nginx
    company: devseccops
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: external-app
      app.kubernetes.io/instance: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-app
        app.kubernetes.io/instance: nginx
    spec:
      serviceAccountName: stage-nginx-sa
      securityContext: {}
      containers:
        - name: nginx
          securityContext: {}
          image: amitow/nginx:v1
          imagePullPolicy: 'Always'
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '256Mi'
              cpu: '200m'
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
