nginx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
      name: http
  selector:
    app.kubernetes.io/name: external-app
    app.kubernetes.io/instance: nginx
